--- a/templates/views/error.hbs
+++ b/templates/views/error.hbs
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="main-content">
-        {{>header}}
-            <div style="text-align: center; color:orangered;">
-                <h1 style="font-size: 12rem;margin: 0">404</h1>
-                <p style="font-family:Arial, Helvetica, sans-serif; font-size: 1.75rem; margin-top: 0; text-align: center;">{{errorText}}</p>            
-            </div>
+    {{>header}}
+        <div style="text-align: center; color:orangered;">
+            <h1 style="font-size: 12rem;margin: 0">404</h1>
+            <p style="font-family:Arial, Helvetica, sans-serif; font-size: 1.75rem; margin-top: 0; text-align: center;">{{errorText}}</p>            
         </div>
+    </div>
     {{>footer}}
+</body>
 </html>
