--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,8 +8,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: darkslategrey;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
     min-height: 100vh;
     max-width: 40rem;
@@ -53,6 +51,7 @@ header a {
     width: 40%;
     margin-left: 30%;
     border-radius: 50%;
+    margin-top: 1rem;
 }
 
 input {
