--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site is designed by Andrew Mead and made by me :-) It provides basic weather information using data from mapbox.com and weatherstack.com. </p>
+        <p>This site is designed by Andrew Mead and made by me :-) It provides basic weather information using the location data from mapbox.com and weather data from weatherstack.com. </p>
         <img class="portrait" src="./img/2992789.jpeg" alt="">
         </div>
     {{>footer}}
