Yet another about page edit

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,9 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site is designed by Andrew Mead and made by me :-) It provides basic weather information using the location data from mapbox.com and weather data from weatherstack.com. </p>
+        <p>This site was built as part of <a href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">Node.js</a> Udemy course created by Andrew Mead. It provides basic weather information using the location data from <a href="https://www.mapbox.com">mapbox</a> and weather data from <a href="https://www.weatherstack.com">weatherstack</a>.</p>
         <img class="portrait" src="./img/2992789.jpeg" alt="">
+        
         </div>
     {{>footer}}
 </html>
