Removed the links  text decoration

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site was built as part of <a href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/">Node.js</a> Udemy course created by Andrew Mead. It provides basic weather information using the location data from <a href="https://www.mapbox.com">mapbox</a> and weather data from <a href="https://www.weatherstack.com">weatherstack</a>.</p>
+        <p>This site was built as part of <a href="https://www.udemy.com/course/the-complete-nodejs-developer-course-2/" target="_blank" style="text-decoration: none;">Node.js</a> Udemy course created by Andrew Mead. It provides basic weather information using the location data from <a href="https://www.mapbox.com" target="_blank" style="text-decoration: none;">mapbox</a> and weather data from <a href="https://www.weatherstack.com" target="_blank" style="text-decoration: none;">weatherstack</a>.</p>
         <img class="portrait" src="./img/2992789.jpeg" alt="">
         
         </div>
